使用 Colaboratory 建立

--- a/數量研究方法_多目標規劃實作.ipynb
+++ b/數量研究方法_多目標規劃實作.ipynb
@@ -17,7 +17,7 @@
         "id": "78b632eb"
       },
       "source": [
-        "## 取得員工可上班日調查表"
+        "## **取得員工可上班日調查表**"
       ]
     },
     {
@@ -436,7 +436,7 @@
         "id": "638e7fe0"
       },
       "source": [
-        "## 設定公司每個上班日所需人數"
+        "## **設定公司每個上班日所需人數**"
       ]
     },
     {
@@ -474,7 +474,7 @@
         "id": "9c7330e1"
       },
       "source": [
-        "## 設定每日人事成本"
+        "## **設定每日人事成本**"
       ]
     },
     {
@@ -510,7 +510,7 @@
         "id": "5cf94c02"
       },
       "source": [
-        "# 單一目標規劃: G1 讓員工上班日盡量平均"
+        "# **1. 單一目標規劃: Goal1 讓員工上班日盡量平均**"
       ]
     },
     {
@@ -530,7 +530,7 @@
         "id": "eac906fb"
       },
       "source": [
-        "## 建立模型"
+        "## **建立模型**"
       ]
     },
     {
@@ -584,7 +584,7 @@
         "id": "1ab48649"
       },
       "source": [
-        "### 設計變數"
+        "### **設計變數**"
       ]
     },
     {
@@ -617,7 +617,7 @@
         "id": "e19b28d9"
       },
       "source": [
-        "### 輔助變數"
+        "### **輔助變數**"
       ]
     },
     {
@@ -736,7 +736,7 @@
         "id": "eac5fbe9"
       },
       "source": [
-        "## 執行結果"
+        "## **執行結果**"
       ]
     },
     {
@@ -870,7 +870,7 @@
         "id": "53418366"
       },
       "source": [
-        "# 單目標規劃: G2 成本極小化"
+        "# 單目標規劃: Goal2 成本極小化"
       ]
     },
     {
@@ -1126,7 +1126,7 @@
         "id": "403435dc"
       },
       "source": [
-        "# 多目標規劃: G1 + G2 同時考慮"
+        "# **多目標規劃: G1 + G2 同時考慮**"
       ]
     },
     {
@@ -1457,6 +1457,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
