使用 Colaboratory 建立

--- a/數量研究方法_多目標規劃實作.ipynb
+++ b/數量研究方法_多目標規劃實作.ipynb
@@ -870,7 +870,7 @@
         "id": "53418366"
       },
       "source": [
-        "# 單目標規劃: Goal2 成本極小化"
+        "# **2. 單目標規劃: Goal2 成本極小化**"
       ]
     },
     {
@@ -1126,7 +1126,7 @@
         "id": "403435dc"
       },
       "source": [
-        "# **多目標規劃: G1 + G2 同時考慮**"
+        "# **3. 多目標規劃: G1 + G2 同時考慮**"
       ]
     },
     {
