使用 Colaboratory 建立

--- a/數量研究方法_多目標規劃實作.ipynb
+++ b/數量研究方法_多目標規劃實作.ipynb
@@ -510,7 +510,7 @@
         "id": "5cf94c02"
       },
       "source": [
-        "# **1. 單一目標規劃: Goal1 讓員工上班日盡量平均**"
+        "# **1. 單一目標: Goal1 讓員工上班日盡量平均**"
       ]
     },
     {
@@ -520,7 +520,7 @@
         "id": "42107d93"
       },
       "source": [
-        "上班最多天的員工天數 - 上班最少天的員工天數 <= 1"
+        "上班最多天員工的上班天數 - 上班最少天員工的上班天數 <= 1"
       ]
     },
     {
@@ -870,7 +870,7 @@
         "id": "53418366"
       },
       "source": [
-        "# **2. 單目標規劃: Goal2 成本極小化**"
+        "# **2. 單一目標: Goal2 成本極小化**"
       ]
     },
     {
