使用 Colaboratory 建立

--- a/數量研究方法_多目標規劃實作.ipynb
+++ b/數量研究方法_多目標規劃實作.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "737e7a93",
       "metadata": {
         "ExecuteTime": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "id": "180b6a39",
       "metadata": {
         "ExecuteTime": {
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "2dc6c02f",
       "metadata": {
         "ExecuteTime": {
@@ -69,7 +69,7 @@
           "height": 551
         },
         "id": "2dc6c02f",
-        "outputId": "1a0bdf10-5f77-4273-cebb-c06129d21ecd"
+        "outputId": "b158cc6a-51fb-4551-be10-9580601593c4"
       },
       "outputs": [
         {
@@ -96,7 +96,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a1f17662-4a4f-499b-b8f8-132412425ba6\">\n",
+              "  <div id=\"df-166e82d6-188c-4c4c-9524-8a03fc18cb2f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -340,7 +340,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a1f17662-4a4f-499b-b8f8-132412425ba6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-166e82d6-188c-4c4c-9524-8a03fc18cb2f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -391,12 +391,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a1f17662-4a4f-499b-b8f8-132412425ba6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-166e82d6-188c-4c4c-9524-8a03fc18cb2f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a1f17662-4a4f-499b-b8f8-132412425ba6');\n",
+              "          const element = document.querySelector('#df-166e82d6-188c-4c4c-9524-8a03fc18cb2f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "beaa7955",
       "metadata": {
         "ExecuteTime": {
@@ -479,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "d11e6143",
       "metadata": {
         "ExecuteTime": {
@@ -539,18 +539,20 @@
         "try:\n",
         "    from gurobipy import *\n",
         "except:\n",
-        "    !pip install gurobipy"
+        "    !pip install gurobipy\n",
+        "finally:\n",
+        "    from gurobipy import *"
       ],
       "metadata": {
         "id": "-nLdkzKbZ3c_"
       },
       "id": "-nLdkzKbZ3c_",
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "id": "7f27aa3f",
       "metadata": {
         "ExecuteTime": {
@@ -561,7 +563,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7f27aa3f",
-        "outputId": "b02b63fb-bd32-427a-8537-c726fbfa9ad1"
+        "outputId": "f5c80494-1cb3-4e9b-af5e-ea749393ee61"
       },
       "outputs": [
         {
@@ -589,7 +591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "id": "b811ec8c",
       "metadata": {
         "ExecuteTime": {
@@ -622,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "f7895405",
       "metadata": {
         "ExecuteTime": {
@@ -643,7 +645,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "8dd7d79e",
       "metadata": {
         "ExecuteTime": {
@@ -669,7 +671,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "id": "7a88edfc",
       "metadata": {
         "ExecuteTime": {
@@ -680,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7a88edfc",
-        "outputId": "5cfa0a9f-ab62-4112-80ac-fdc24c33d950"
+        "outputId": "c91e5644-fb6b-4bcc-dcb0-20abeaf71f8c"
       },
       "outputs": [
         {
@@ -689,7 +691,7 @@
           "text": [
             "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (linux64)\n",
             "\n",
-            "CPU model: Intel(R) Xeon(R) CPU @ 2.20GHz, instruction set [SSE2|AVX|AVX2]\n",
+            "CPU model: AMD EPYC 7B12, instruction set [SSE2|AVX|AVX2]\n",
             "Thread count: 1 physical cores, 2 logical processors, using up to 2 threads\n",
             "\n",
             "Optimize a model with 26 rows, 169 columns and 319 nonzeros\n",
@@ -712,7 +714,7 @@
             "\n",
             "Root relaxation: cutoff, 0 iterations, 0.00 seconds (0.00 work units)\n",
             "\n",
-            "Explored 1 nodes (0 simplex iterations) in 0.03 seconds (0.00 work units)\n",
+            "Explored 1 nodes (0 simplex iterations) in 0.02 seconds (0.00 work units)\n",
             "Thread count was 2 (of 2 available processors)\n",
             "\n",
             "Solution count 3: 3.10862e-15 1 20 \n",
@@ -741,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "3c802d4f",
       "metadata": {
         "ExecuteTime": {
@@ -752,7 +754,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3c802d4f",
-        "outputId": "bdc18dff-ec8b-438c-b66f-5db5988501f3"
+        "outputId": "d3071715-d0d9-48ee-9108-1bd75a4320b4"
       },
       "outputs": [
         {
@@ -825,7 +827,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "id": "eba3ea34",
       "metadata": {
         "ExecuteTime": {
@@ -836,7 +838,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eba3ea34",
-        "outputId": "57fd49d8-1055-44e4-b912-d91fee5246e4"
+        "outputId": "e43710e5-550f-4d96-e5d5-eac5ce70e9c5"
       },
       "outputs": [
         {
@@ -885,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "8b544ebc",
       "metadata": {
         "ExecuteTime": {
@@ -911,7 +913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "2cee5a89",
       "metadata": {
         "ExecuteTime": {
@@ -935,12 +937,12 @@
         "num_workdays = m2.addConstrs((x.sum(e, '*') == totalWorkdays[e] for e in df.index), name='totalWorkdays')\n",
         "\n",
         "# 限制式: 目標函數\n",
-        "goal2 = m2.addConstr((daily_wage*totalWorkdays.sum() + n2 - p2 == 40000), name='goal2')"
+        "goal2 = m2.addConstr((daily_wage*totalWorkdays.sum() + n2 - p2 == 35000), name='goal2')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "id": "c229e5a8",
       "metadata": {
         "ExecuteTime": {
@@ -951,7 +953,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c229e5a8",
-        "outputId": "56a5d055-05d5-41d6-e672-3a10dd4a993c"
+        "outputId": "f49e88ba-257a-4c6c-c5fa-33920f8383bb"
       },
       "outputs": [
         {
@@ -960,31 +962,33 @@
           "text": [
             "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (linux64)\n",
             "\n",
-            "CPU model: Intel(R) Xeon(R) CPU @ 2.20GHz, instruction set [SSE2|AVX|AVX2]\n",
+            "CPU model: AMD EPYC 7B12, instruction set [SSE2|AVX|AVX2]\n",
             "Thread count: 1 physical cores, 2 logical processors, using up to 2 threads\n",
             "\n",
             "Optimize a model with 26 rows, 167 columns and 332 nonzeros\n",
-            "Model fingerprint: 0x3fd53325\n",
+            "Model fingerprint: 0x9f8e9e95\n",
             "Variable types: 17 continuous, 150 integer (150 binary)\n",
             "Coefficient statistics:\n",
             "  Matrix range     [1e+00, 2e+03]\n",
             "  Objective range  [1e+00, 1e+01]\n",
             "  Bounds range     [1e+00, 1e+00]\n",
             "  RHS range        [1e+00, 4e+04]\n",
-            "Found heuristic solution: objective 8000.0000000\n",
+            "Found heuristic solution: objective 3000.0000000\n",
             "Presolve removed 25 rows and 165 columns\n",
             "Presolve time: 0.00s\n",
             "Presolved: 1 rows, 2 columns, 2 nonzeros\n",
-            "Found heuristic solution: objective 0.0000000\n",
+            "Found heuristic solution: objective 1400.0000000\n",
             "Variable types: 0 continuous, 2 integer (0 binary)\n",
             "\n",
-            "Explored 0 nodes (0 simplex iterations) in 0.03 seconds (0.00 work units)\n",
+            "Root relaxation: cutoff, 0 iterations, 0.00 seconds (0.00 work units)\n",
+            "\n",
+            "Explored 1 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
             "Thread count was 2 (of 2 available processors)\n",
             "\n",
-            "Solution count 2: 0 8000 \n",
+            "Solution count 2: 1400 3000 \n",
             "\n",
             "Optimal solution found (tolerance 1.00e-04)\n",
-            "Best objective 0.000000000000e+00, best bound 0.000000000000e+00, gap 0.0000%\n"
+            "Best objective 1.400000000000e+03, best bound 1.400000000000e+03, gap 0.0000%\n"
           ]
         }
       ],
@@ -997,7 +1001,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "id": "c11c563c",
       "metadata": {
         "ExecuteTime": {
@@ -1008,7 +1012,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c11c563c",
-        "outputId": "30685870-fba5-47a1-f8b1-a7ced5b44835"
+        "outputId": "f28495c3-0de7-42de-c211-4e5a58c99f01"
       },
       "outputs": [
         {
@@ -1021,36 +1025,36 @@
             "1         0  1  1  0  0  0  0  0  0   0\n",
             "2         1  0  0  0  0  0  0  0  0   0\n",
             "3         0  0  0  0  1  0  0  0  1   0\n",
-            "4         1  0  0  0  1  0  0  0  1   0\n",
+            "4         0  0  0  0  1  0  0  0  0   0\n",
             "5         0  1  1  1  0  0  1  0  0   0\n",
             "6         0  0  0  1  0  0  0  0  0   0\n",
-            "7         0  0  0  0  0  0  0  0  1   0\n",
+            "7         0  0  0  0  0  0  0  0  0   0\n",
             "8         1  0  0  0  1  0  0  0  0   0\n",
             "9         0  0  0  0  0  0  0  0  1   1\n",
             "10        0  0  0  0  0  0  0  1  0   0\n",
             "11        0  0  0  0  0  0  0  0  0   0\n",
             "12        0  0  0  0  0  1  0  0  0   0\n",
-            "13        0  1  0  0  0  0  0  1  1   0\n",
+            "13        0  1  0  0  0  0  0  1  0   0\n",
             "14        1  0  0  0  0  0  1  0  0   0\n",
             "Employee\n",
             "0     0\n",
             "1     2\n",
             "2     1\n",
             "3     2\n",
-            "4     3\n",
+            "4     1\n",
             "5     4\n",
             "6     1\n",
-            "7     1\n",
+            "7     0\n",
             "8     2\n",
             "9     2\n",
             "10    1\n",
             "11    0\n",
             "12    1\n",
-            "13    3\n",
+            "13    2\n",
             "14    2\n",
             "dtype: int64\n",
             "WorkDay\n",
-            "1     4\n",
+            "1     3\n",
             "2     3\n",
             "3     2\n",
             "4     2\n",
@@ -1058,7 +1062,7 @@
             "6     1\n",
             "7     2\n",
             "8     2\n",
-            "9     5\n",
+            "9     2\n",
             "10    1\n",
             "dtype: int64\n"
           ]
@@ -1081,7 +1085,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "id": "c144def8",
       "metadata": {
         "ExecuteTime": {
@@ -1092,7 +1096,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c144def8",
-        "outputId": "16e489dc-4417-4755-977b-c64658e67afc"
+        "outputId": "33911c75-2a82-48e7-a609-b1074e10703c"
       },
       "outputs": [
         {
@@ -1100,7 +1104,7 @@
           "name": "stdout",
           "text": [
             "工作天數全距: 4 天\n",
-            "人事成本40000 元\n"
+            "人事成本33600 元\n"
           ]
         }
       ],
@@ -1131,7 +1135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "id": "38f0dcd0",
       "metadata": {
         "ExecuteTime": {
@@ -1157,7 +1161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "id": "582db886",
       "metadata": {
         "ExecuteTime": {
@@ -1180,7 +1184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "id": "7e1cfca2",
       "metadata": {
         "ExecuteTime": {
@@ -1205,12 +1209,12 @@
         "goal1 = m3.addConstr(((maxWorkday - minWorkday) + n1 - p1 == 1), name='goal1')\n",
         "\n",
         "# 限制式: 目標函數\n",
-        "goal2 = m3.addConstr((daily_wage*totalWorkdays.sum() + n2 - p2 == 40000), name='goal2')"
+        "goal2 = m3.addConstr((daily_wage*totalWorkdays.sum() + n2 - p2 == 35000), name='goal2')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "id": "a029a604",
       "metadata": {
         "ExecuteTime": {
@@ -1221,7 +1225,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a029a604",
-        "outputId": "674faa86-fedb-464c-cda5-7127585a8a43"
+        "outputId": "8aa71333-8484-4cd0-9ac9-a2aa05146a80"
       },
       "outputs": [
         {
@@ -1230,11 +1234,11 @@
           "text": [
             "Gurobi Optimizer version 10.0.1 build v10.0.1rc0 (linux64)\n",
             "\n",
-            "CPU model: Intel(R) Xeon(R) CPU @ 2.20GHz, instruction set [SSE2|AVX|AVX2]\n",
+            "CPU model: AMD EPYC 7B12, instruction set [SSE2|AVX|AVX2]\n",
             "Thread count: 1 physical cores, 2 logical processors, using up to 2 threads\n",
             "\n",
             "Optimize a model with 27 rows, 171 columns and 336 nonzeros\n",
-            "Model fingerprint: 0xd66854a1\n",
+            "Model fingerprint: 0x69790d05\n",
             "Model has 2 general constraints\n",
             "Variable types: 21 continuous, 150 integer (150 binary)\n",
             "Coefficient statistics:\n",
@@ -1258,7 +1262,7 @@
             "H    0     0                       0.0000000  -20.00000      -     -    0s\n",
             "     0     0    0.00000    0   29    0.00000    0.00000  0.00%     -    0s\n",
             "\n",
-            "Explored 1 nodes (42 simplex iterations) in 0.03 seconds (0.00 work units)\n",
+            "Explored 1 nodes (42 simplex iterations) in 0.02 seconds (0.00 work units)\n",
             "Thread count was 2 (of 2 available processors)\n",
             "\n",
             "Solution count 3: 0 30 40 \n",
@@ -1277,7 +1281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "id": "6eadab98",
       "metadata": {
         "ExecuteTime": {
@@ -1288,7 +1292,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6eadab98",
-        "outputId": "fc6632f8-198a-4f83-b21b-4336ee3fb244"
+        "outputId": "74776450-3116-4466-f877-d8214fdf6b3b"
       },
       "outputs": [
         {
@@ -1300,12 +1304,12 @@
             "0         0  0  1  0  0  0  0  0  0   0\n",
             "1         0  1  0  0  0  0  0  0  0   0\n",
             "2         0  0  0  0  0  1  1  0  0   0\n",
-            "3         0  0  0  0  1  0  0  0  1   0\n",
+            "3         0  0  0  0  1  0  0  0  0   0\n",
             "4         0  0  0  1  1  0  0  0  0   0\n",
             "5         0  0  1  1  0  0  0  0  0   0\n",
             "6         0  1  0  0  0  0  0  0  0   0\n",
-            "7         0  1  0  0  0  0  0  1  0   0\n",
-            "8         1  0  0  0  0  0  0  0  0   0\n",
+            "7         0  0  0  0  0  0  0  1  1   0\n",
+            "8         0  0  0  1  0  0  0  0  0   0\n",
             "9         1  0  0  0  0  0  0  0  0   0\n",
             "10        0  0  0  0  0  0  0  1  0   0\n",
             "11        0  0  0  0  0  0  0  0  0   1\n",
@@ -1316,7 +1320,7 @@
             "0     1\n",
             "1     1\n",
             "2     2\n",
-            "3     2\n",
+            "3     1\n",
             "4     2\n",
             "5     2\n",
             "6     1\n",
@@ -1330,10 +1334,10 @@
             "14    2\n",
             "dtype: int64\n",
             "WorkDay\n",
-            "1     3\n",
-            "2     4\n",
+            "1     2\n",
+            "2     3\n",
             "3     2\n",
-            "4     2\n",
+            "4     3\n",
             "5     3\n",
             "6     1\n",
             "7     2\n",
@@ -1361,7 +1365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "id": "8b9e0610",
       "metadata": {
         "ExecuteTime": {
@@ -1372,7 +1376,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8b9e0610",
-        "outputId": "6de42d47-cc63-4dd6-d5b7-51f63e42b72b"
+        "outputId": "1f0fd0f8-4ab8-41f1-918c-ea6c13e41f9b"
       },
       "outputs": [
         {
@@ -1380,7 +1384,7 @@
           "name": "stdout",
           "text": [
             "工作天數全距: 1 天\n",
-            "人事成本: 35200 元\n"
+            "人事成本: 33600 元\n"
           ]
         }
       ],
