--- a/數量研究方法_多目標規劃實作.ipynb
+++ b/數量研究方法_多目標規劃實作.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 92,
       "id": "737e7a93",
       "metadata": {
         "ExecuteTime": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 93,
       "id": "180b6a39",
       "metadata": {
         "ExecuteTime": {
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 94,
       "id": "2dc6c02f",
       "metadata": {
         "ExecuteTime": {
@@ -69,7 +69,7 @@
           "height": 551
         },
         "id": "2dc6c02f",
-        "outputId": "b158cc6a-51fb-4551-be10-9580601593c4"
+        "outputId": "3db95845-d433-4029-e29e-70de29c44311"
       },
       "outputs": [
         {
@@ -96,7 +96,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-166e82d6-188c-4c4c-9524-8a03fc18cb2f\">\n",
+              "  <div id=\"df-295ed6a3-5a07-49cd-ba7c-eb5675de9dc2\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -340,7 +340,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-166e82d6-188c-4c4c-9524-8a03fc18cb2f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-295ed6a3-5a07-49cd-ba7c-eb5675de9dc2')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -391,12 +391,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-166e82d6-188c-4c4c-9524-8a03fc18cb2f button.colab-df-convert');\n",
+              "          document.querySelector('#df-295ed6a3-5a07-49cd-ba7c-eb5675de9dc2 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-166e82d6-188c-4c4c-9524-8a03fc18cb2f');\n",
+              "          const element = document.querySelector('#df-295ed6a3-5a07-49cd-ba7c-eb5675de9dc2');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -419,7 +419,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 94
         }
       ],
       "source": [
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 95,
       "id": "beaa7955",
       "metadata": {
         "ExecuteTime": {
@@ -479,7 +479,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 96,
       "id": "d11e6143",
       "metadata": {
         "ExecuteTime": {
@@ -547,33 +547,21 @@
         "id": "-nLdkzKbZ3c_"
       },
       "id": "-nLdkzKbZ3c_",
-      "execution_count": 13,
+      "execution_count": 97,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 98,
       "id": "7f27aa3f",
       "metadata": {
         "ExecuteTime": {
           "end_time": "2023-06-07T15:03:52.482415Z",
           "start_time": "2023-06-07T15:03:52.466906Z"
         },
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7f27aa3f",
-        "outputId": "f5c80494-1cb3-4e9b-af5e-ea749393ee61"
+        "id": "7f27aa3f"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Restricted license - for non-production use only - expires 2024-10-28\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# 建模\n",
         "m1 = Model('員工排班')"
@@ -591,7 +579,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 99,
       "id": "b811ec8c",
       "metadata": {
         "ExecuteTime": {
@@ -624,7 +612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 100,
       "id": "f7895405",
       "metadata": {
         "ExecuteTime": {
@@ -645,7 +633,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 101,
       "id": "8dd7d79e",
       "metadata": {
         "ExecuteTime": {
@@ -671,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 102,
       "id": "7a88edfc",
       "metadata": {
         "ExecuteTime": {
@@ -682,7 +670,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7a88edfc",
-        "outputId": "c91e5644-fb6b-4bcc-dcb0-20abeaf71f8c"
+        "outputId": "b2672303-0304-4c27-9847-b4dd7afd33c2"
       },
       "outputs": [
         {
@@ -743,7 +731,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 103,
       "id": "3c802d4f",
       "metadata": {
         "ExecuteTime": {
@@ -754,7 +742,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3c802d4f",
-        "outputId": "d3071715-d0d9-48ee-9108-1bd75a4320b4"
+        "outputId": "4010137f-cb5d-497f-be58-7bf16669677b"
       },
       "outputs": [
         {
@@ -827,7 +815,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 104,
       "id": "eba3ea34",
       "metadata": {
         "ExecuteTime": {
@@ -838,7 +826,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eba3ea34",
-        "outputId": "e43710e5-550f-4d96-e5d5-eac5ce70e9c5"
+        "outputId": "c6de9990-0b70-4c6b-e060-0deb04b19e0d"
       },
       "outputs": [
         {
@@ -887,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 105,
       "id": "8b544ebc",
       "metadata": {
         "ExecuteTime": {
@@ -913,7 +901,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 106,
       "id": "2cee5a89",
       "metadata": {
         "ExecuteTime": {
@@ -937,12 +925,12 @@
         "num_workdays = m2.addConstrs((x.sum(e, '*') == totalWorkdays[e] for e in df.index), name='totalWorkdays')\n",
         "\n",
         "# 限制式: 目標函數\n",
-        "goal2 = m2.addConstr((daily_wage*totalWorkdays.sum() + n2 - p2 == 35000), name='goal2')"
+        "goal2 = m2.addConstr((daily_wage*totalWorkdays.sum() + n2 - p2 == 32000), name='goal2')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 107,
       "id": "c229e5a8",
       "metadata": {
         "ExecuteTime": {
@@ -953,7 +941,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c229e5a8",
-        "outputId": "f49e88ba-257a-4c6c-c5fa-33920f8383bb"
+        "outputId": "8f0b3624-ba48-40e3-e1b2-a5d8cace8f22"
       },
       "outputs": [
         {
@@ -966,29 +954,22 @@
             "Thread count: 1 physical cores, 2 logical processors, using up to 2 threads\n",
             "\n",
             "Optimize a model with 26 rows, 167 columns and 332 nonzeros\n",
-            "Model fingerprint: 0x9f8e9e95\n",
+            "Model fingerprint: 0xd7928deb\n",
             "Variable types: 17 continuous, 150 integer (150 binary)\n",
             "Coefficient statistics:\n",
             "  Matrix range     [1e+00, 2e+03]\n",
             "  Objective range  [1e+00, 1e+01]\n",
             "  Bounds range     [1e+00, 1e+00]\n",
-            "  RHS range        [1e+00, 4e+04]\n",
-            "Found heuristic solution: objective 3000.0000000\n",
-            "Presolve removed 25 rows and 165 columns\n",
-            "Presolve time: 0.00s\n",
-            "Presolved: 1 rows, 2 columns, 2 nonzeros\n",
-            "Found heuristic solution: objective 1400.0000000\n",
-            "Variable types: 0 continuous, 2 integer (0 binary)\n",
+            "  RHS range        [1e+00, 3e+04]\n",
+            "Found heuristic solution: objective 0.0000000\n",
             "\n",
-            "Root relaxation: cutoff, 0 iterations, 0.00 seconds (0.00 work units)\n",
+            "Explored 0 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
+            "Thread count was 1 (of 2 available processors)\n",
             "\n",
-            "Explored 1 nodes (0 simplex iterations) in 0.01 seconds (0.00 work units)\n",
-            "Thread count was 2 (of 2 available processors)\n",
-            "\n",
-            "Solution count 2: 1400 3000 \n",
+            "Solution count 1: 0 \n",
             "\n",
             "Optimal solution found (tolerance 1.00e-04)\n",
-            "Best objective 1.400000000000e+03, best bound 1.400000000000e+03, gap 0.0000%\n"
+            "Best objective 0.000000000000e+00, best bound 0.000000000000e+00, gap 0.0000%\n"
           ]
         }
       ],
@@ -1001,7 +982,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 108,
       "id": "c11c563c",
       "metadata": {
         "ExecuteTime": {
@@ -1012,7 +993,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c11c563c",
-        "outputId": "f28495c3-0de7-42de-c211-4e5a58c99f01"
+        "outputId": "1953c9b8-2604-442c-c95c-ae137b371d37"
       },
       "outputs": [
         {
@@ -1023,38 +1004,38 @@
             "Employee                               \n",
             "0         0  0  0  0  0  0  0  0  0   0\n",
             "1         0  1  1  0  0  0  0  0  0   0\n",
-            "2         1  0  0  0  0  0  0  0  0   0\n",
-            "3         0  0  0  0  1  0  0  0  1   0\n",
-            "4         0  0  0  0  1  0  0  0  0   0\n",
-            "5         0  1  1  1  0  0  1  0  0   0\n",
-            "6         0  0  0  1  0  0  0  0  0   0\n",
-            "7         0  0  0  0  0  0  0  0  0   0\n",
-            "8         1  0  0  0  1  0  0  0  0   0\n",
-            "9         0  0  0  0  0  0  0  0  1   1\n",
-            "10        0  0  0  0  0  0  0  1  0   0\n",
+            "2         0  0  0  0  0  0  0  0  0   0\n",
+            "3         0  1  0  0  1  0  0  0  0   0\n",
+            "4         0  0  0  0  0  0  0  0  0   0\n",
+            "5         0  1  0  1  0  0  1  0  0   0\n",
+            "6         0  0  0  0  0  0  0  0  0   0\n",
+            "7         0  0  0  0  0  0  0  0  1   0\n",
+            "8         1  0  0  1  1  0  0  0  0   0\n",
+            "9         0  0  0  0  0  0  0  0  0   0\n",
+            "10        0  0  0  0  0  0  0  0  0   0\n",
             "11        0  0  0  0  0  0  0  0  0   0\n",
-            "12        0  0  0  0  0  1  0  0  0   0\n",
-            "13        0  1  0  0  0  0  0  1  0   0\n",
+            "12        0  0  1  0  1  1  0  1  0   1\n",
+            "13        0  0  0  0  0  0  0  1  1   0\n",
             "14        1  0  0  0  0  0  1  0  0   0\n",
             "Employee\n",
             "0     0\n",
             "1     2\n",
-            "2     1\n",
+            "2     0\n",
             "3     2\n",
-            "4     1\n",
-            "5     4\n",
-            "6     1\n",
-            "7     0\n",
-            "8     2\n",
-            "9     2\n",
-            "10    1\n",
+            "4     0\n",
+            "5     3\n",
+            "6     0\n",
+            "7     1\n",
+            "8     3\n",
+            "9     0\n",
+            "10    0\n",
             "11    0\n",
-            "12    1\n",
+            "12    5\n",
             "13    2\n",
             "14    2\n",
             "dtype: int64\n",
             "WorkDay\n",
-            "1     3\n",
+            "1     2\n",
             "2     3\n",
             "3     2\n",
             "4     2\n",
@@ -1085,7 +1066,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 109,
       "id": "c144def8",
       "metadata": {
         "ExecuteTime": {
@@ -1096,15 +1077,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c144def8",
-        "outputId": "33911c75-2a82-48e7-a609-b1074e10703c"
+        "outputId": "e5013987-2a84-429f-da20-3677779d9987"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "工作天數全距: 4 天\n",
-            "人事成本33600 元\n"
+            "工作天數全距: 5 天\n",
+            "人事成本32000 元\n"
           ]
         }
       ],
@@ -1135,7 +1116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 110,
       "id": "38f0dcd0",
       "metadata": {
         "ExecuteTime": {
@@ -1161,7 +1142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 111,
       "id": "582db886",
       "metadata": {
         "ExecuteTime": {
@@ -1184,7 +1165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 112,
       "id": "7e1cfca2",
       "metadata": {
         "ExecuteTime": {
@@ -1209,12 +1190,12 @@
         "goal1 = m3.addConstr(((maxWorkday - minWorkday) + n1 - p1 == 1), name='goal1')\n",
         "\n",
         "# 限制式: 目標函數\n",
-        "goal2 = m3.addConstr((daily_wage*totalWorkdays.sum() + n2 - p2 == 35000), name='goal2')"
+        "goal2 = m3.addConstr((daily_wage*totalWorkdays.sum() + n2 - p2 == 33000), name='goal2')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 113,
       "id": "a029a604",
       "metadata": {
         "ExecuteTime": {
@@ -1225,7 +1206,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a029a604",
-        "outputId": "8aa71333-8484-4cd0-9ac9-a2aa05146a80"
+        "outputId": "e31f9816-88b8-47ee-be19-328d5e672d8d"
       },
       "outputs": [
         {
@@ -1238,14 +1219,14 @@
             "Thread count: 1 physical cores, 2 logical processors, using up to 2 threads\n",
             "\n",
             "Optimize a model with 27 rows, 171 columns and 336 nonzeros\n",
-            "Model fingerprint: 0x69790d05\n",
+            "Model fingerprint: 0x562e4c9c\n",
             "Model has 2 general constraints\n",
             "Variable types: 21 continuous, 150 integer (150 binary)\n",
             "Coefficient statistics:\n",
             "  Matrix range     [1e+00, 2e+03]\n",
             "  Objective range  [1e+01, 1e+01]\n",
             "  Bounds range     [1e+00, 1e+00]\n",
-            "  RHS range        [1e+00, 4e+04]\n",
+            "  RHS range        [1e+00, 3e+04]\n",
             "Presolve added 28 rows and 0 columns\n",
             "Presolve removed 0 rows and 95 columns\n",
             "Presolve time: 0.00s\n",
@@ -1281,7 +1262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 114,
       "id": "6eadab98",
       "metadata": {
         "ExecuteTime": {
@@ -1292,7 +1273,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6eadab98",
-        "outputId": "74776450-3116-4466-f877-d8214fdf6b3b"
+        "outputId": "7e0e678a-6b90-4b63-9e30-abf791a97150"
       },
       "outputs": [
         {
@@ -1303,16 +1284,16 @@
             "Employee                               \n",
             "0         0  0  1  0  0  0  0  0  0   0\n",
             "1         0  1  0  0  0  0  0  0  0   0\n",
-            "2         0  0  0  0  0  1  1  0  0   0\n",
+            "2         0  0  0  0  0  1  0  0  0   1\n",
             "3         0  0  0  0  1  0  0  0  0   0\n",
             "4         0  0  0  1  1  0  0  0  0   0\n",
-            "5         0  0  1  1  0  0  0  0  0   0\n",
+            "5         0  0  0  1  0  0  0  0  0   0\n",
             "6         0  1  0  0  0  0  0  0  0   0\n",
             "7         0  0  0  0  0  0  0  1  1   0\n",
-            "8         0  0  0  1  0  0  0  0  0   0\n",
+            "8         0  0  1  0  0  0  0  0  0   0\n",
             "9         1  0  0  0  0  0  0  0  0   0\n",
             "10        0  0  0  0  0  0  0  1  0   0\n",
-            "11        0  0  0  0  0  0  0  0  0   1\n",
+            "11        0  0  0  0  0  0  1  0  0   0\n",
             "12        0  0  0  0  1  0  0  0  0   0\n",
             "13        0  1  0  0  0  0  0  0  1   0\n",
             "14        1  0  0  0  0  0  1  0  0   0\n",
@@ -1322,7 +1303,7 @@
             "2     2\n",
             "3     1\n",
             "4     2\n",
-            "5     2\n",
+            "5     1\n",
             "6     1\n",
             "7     2\n",
             "8     1\n",
@@ -1337,7 +1318,7 @@
             "1     2\n",
             "2     3\n",
             "3     2\n",
-            "4     3\n",
+            "4     2\n",
             "5     3\n",
             "6     1\n",
             "7     2\n",
@@ -1365,7 +1346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 115,
       "id": "8b9e0610",
       "metadata": {
         "ExecuteTime": {
@@ -1376,7 +1357,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8b9e0610",
-        "outputId": "1f0fd0f8-4ab8-41f1-918c-ea6c13e41f9b"
+        "outputId": "3bfb65cb-2f72-407d-8528-46c69113531a"
       },
       "outputs": [
         {
@@ -1384,7 +1365,7 @@
           "name": "stdout",
           "text": [
             "工作天數全距: 1 天\n",
-            "人事成本: 33600 元\n"
+            "人事成本: 32000 元\n"
           ]
         }
       ],
